fix: 관리자 계정 상태 전이 규칙과 로그 처리 정리